tests/interpreter/pass/027-for-loop-scoped.hyg
let mutable y = 0;
for (let mutable x=0; x < 5; x++) {
    y += x
};
assert(y = 10)
